More and better comments

--- a/app/templates/user/create.html.twig
+++ b/app/templates/user/create.html.twig
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Create user </title>
     <style>
-        /* Some simple styling to our form */
+        /* Some simple styling to our page */
         .invalid-feedback {
             margin-top: 25px;
             color: red;
@@ -51,7 +51,7 @@
         <!-- Because this form is so simple we can use this helper function which renders the complete form -->
         {{ form(form) }}
 
-        <!-- Existing users -->
+        <!-- Display table with existing users -->
         <table>
             <tr>
                 <th>User ID</th>
